<resources>
    <string name="app_name">Autonest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>
    <string name="action_acerca_de">Acerca de</string>
    <string name="default_web_client_id">1099068980200-0pn4h2ao5g4dr96vjv0ta48eg1ov78v8.apps.googleusercontent.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_luz">Luz</string>
    <string name="menu_parking">Parking</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Bono</string>
    <string name="title_notifications">Perfil</string>
    <string name="title_misbonos">Mis bonos</string>
    <string name="twitter_consumer_key"
        translatable="false">Hoqav02Z04fQ9I2VCfvcs1uyi</string>
    <string name="twitter_consumer_secret" translatable=
        "false">SRIGR65uId2nUGTM8dxsYZGPgY8J3viyWHwjWaObUI4pldIvKN</string>
</resources>