<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_luz"
            android:icon="@drawable/ic_menu_luz"
            android:title="@string/menu_luz" />
        <item
            android:id="@+id/nav_parking"
            android:icon="@drawable/ic_menu_parking"
            android:title="@string/menu_parking" />

        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_menu_cerrar_sesion"
            android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>